--- a/TourManager/WebRoot/assets/css/style.css
+++ b/TourManager/WebRoot/assets/css/style.css
@@ -57,6 +57,41 @@ input {
     -ms-transition: all .2s;
 }
 
+.validcode {
+	float: left;
+	width: 170px;
+	height: 42px;
+	margin-left: 18px;
+    margin-top: 25px;
+    padding: 0 15px;
+    background: #2d2d2d; /* browsers that don't support rgba */
+    background: rgba(45,45,45,.15);
+    -moz-border-radius: 6px;
+    -webkit-border-radius: 6px;
+    border-radius: 6px;
+    border: 1px solid #3d3d3d; /* browsers that don't support rgba */
+    border: 1px solid rgba(255,255,255,.15);
+    -moz-box-shadow: 0 2px 3px 0 rgba(0,0,0,.1) inset;
+    -webkit-box-shadow: 0 2px 3px 0 rgba(0,0,0,.1) inset;
+    box-shadow: 0 2px 3px 0 rgba(0,0,0,.1) inset;
+    font-family: 'PT Sans', Helvetica, Arial, sans-serif;
+    font-size: 14px;
+    color: #fff;
+    text-shadow: 0 1px 2px rgba(0,0,0,.1);
+    -o-transition: all .2s;
+    -moz-transition: all .2s;
+    -webkit-transition: all .2s;
+    -ms-transition: all .2s;
+}
+
+.validcode-img{
+	float: left;
+	width: 80px;
+	height: 37px;
+    margin-top: 25px;
+    padding: 0 15px;
+}
+
 input:-moz-placeholder { color: #fff; }
 input:-ms-input-placeholder { color: #fff; }
 input::-webkit-input-placeholder { color: #fff; }
@@ -160,6 +195,8 @@ button:active {
 }
 
 #loginMsg {
+	float: left;
+	width:100%;	
 	height: 30px;
 	line-height: 30px;
 	margin-top: 7px;
